[project]
name = "proj-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludovina Magalhães",email = "lagmagalhaes@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.6"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
